tests/config_munging_underscores2/config_munging_underscores2.exp
Error --------------------------------------------------------------------------------------------------- chain.js:20:15

Cannot extend `A` [1] with `B` because string [2] is incompatible with number [3] in property `_property1`.

   chain.js:20:15
   20|   _property1: string;
                     ^^^^^^ [2]

References:
   chain.js:19:17
   19| class B extends A {
                       ^ [1]
   chain.js:4:15
    4|   _property1: number;
                     ^^^^^^ [3]


Error --------------------------------------------------------------------------------------------------- chain.js:21:22

Cannot extend `A` [1] with `B` because string [2] is incompatible with number [3] in property `_sProperty`.

   chain.js:21:22
   21|   static _sProperty: string;
                            ^^^^^^ [2]

References:
   chain.js:19:17
   19| class B extends A {
                       ^ [1]
   chain.js:5:22
    5|   static _sProperty: number;
                            ^^^^^^ [3]


Error --------------------------------------------------------------------------------------------------- chain.js:27:15

Cannot extend `A` [1] with `B` because string [2] is incompatible with number [3] in the return value of property
`_method1`.

   chain.js:27:15
   27|   _method1(): string {
                     ^^^^^^ [2]

References:
   chain.js:19:17
   19| class B extends A {
                       ^ [1]
   chain.js:10:15
   10|   _method1(): number {
                     ^^^^^^ [3]


Error --------------------------------------------------------------------------------------------------- chain.js:30:22

Cannot extend `A` [1] with `B` because number [2] is incompatible with string [3] in the return value of property
`_sMethod`.

   chain.js:30:22
   30|   static _sMethod(): number {
                            ^^^^^^ [2]

References:
   chain.js:19:17
   19| class B extends A {
                       ^ [1]
   chain.js:13:22
   13|   static _sMethod(): string {
                            ^^^^^^ [3]



Found 4 errors
